Graal/Gluon native build, SupernautFX 0.1.1-SNAPSHOT
* Upgrade to SupernautFX 0.1.1-SNAPSHOT
* Use new launch method with default background app
* Add Gluon Client Plugin (for native compilation)
* Other cleanup and refactoring

For a native build/run use:

mvn client:build client:run