@@ -1,18 +1,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.openjfx</groupId>
+  <groupId>app.supernaut</groupId>
   <artifactId>hellofx</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>demo</name>
+  <name>SupernautFXHello</name>
   <url>http://maven.apache.org</url>
 
   <properties>
+    <main.class>app.supernaut.fx.sample.maven.HelloFX</main.class>
     <maven.compiler.release>11</maven.compiler.release>
     <javafx.version>15.0.1</javafx.version>
     <micronaut.version>2.3.1</micronaut.version>
-    <supernaut.version>0.1.0</supernaut.version>
+    <supernaut.version>0.1.1-SNAPSHOT</supernaut.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <javafx.maven.plugin.version>0.0.5</javafx.maven.plugin.version>
+    <client.maven.plugin.version>0.1.36</client.maven.plugin.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -29,6 +33,21 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-jdk14</artifactId>
+      <version>1.7.30</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-base</artifactId>
+      <version>${javafx.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-graphics</artifactId>
+      <version>${javafx.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
       <version>${javafx.version}</version>
@@ -44,7 +63,6 @@
 	    <artifactId>supernaut-fx-micronaut</artifactId>
 	    <version>${supernaut.version}</version>
 	    <type>jar</type>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>io.micronaut</groupId>
@@ -62,11 +80,11 @@
   </dependencies>
   <build>
     <plugins>
-<!--      <plugin>-->
-<!--        <groupId>io.micronaut.build</groupId>-->
-<!--        <artifactId>micronaut-maven-plugin</artifactId>-->
-<!--        <version>${micronaut.version}</version>-->
-<!--      </plugin>-->
+      <plugin>
+        <groupId>io.micronaut.build</groupId>
+        <artifactId>micronaut-maven-plugin</artifactId>
+        <version>1.1.5</version>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -91,21 +109,55 @@
       <plugin>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-maven-plugin</artifactId>
-        <version>0.0.5</version>
+        <version>${javafx.maven.plugin.version}</version>
         <configuration>
           <mainClass>hellofx/app.supernaut.fx.sample.maven.HelloFX</mainClass>
           <release>${maven.compiler.release}</release>
+          <!--
           <runtimePathOption>MODULEPATH</runtimePathOption>
           <options>
-            <option>--patch-module</option>
+            <option>-patch-module</option>
             <option>java.annotation=jsr305-3.0.2.jar</option>
-            <option>--add-modules</option>
+            <option>-add-modules</option>
             <option>app.supernaut.fx.micronaut</option>
           </options>
+          -->
           <jlinkImageName>hellofx</jlinkImageName>
           <launcher>launcher</launcher>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>com.gluonhq</groupId>
+        <artifactId>client-maven-plugin</artifactId>
+        <version>${client.maven.plugin.version}</version>
+        <configuration>
+          <target>${client.target}</target>
+          <mainClass>${main.class}</mainClass>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
+  <profiles>
+    <profile>
+      <id>desktop</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <client.target>host</client.target>
+      </properties>
+    </profile>
+    <profile>
+      <id>ios</id>
+      <properties>
+        <client.target>ios</client.target>
+      </properties>
+    </profile>
+    <profile>
+      <id>android</id>
+      <properties>
+        <client.target>android</client.target>
+      </properties>
+    </profile>
+  </profiles>
 </project>
